...
    }()
    
    private let routineTextField: UITextField = {
        let textField = UITextField()
        textField.font = .systemFont(ofSize: 17, weight: .regular)
        textField.textColor = .black
        textField.attributedPlaceholder = NSAttributedString(string: "나의 루틴을 입력해주세요.", attributes: [NSAttributedString.Key.foregroundColor: UIColor.white])
        textField.textAlignment = .center
        textField.backgroundColor = .secondaryColor
        textField.clipsToBounds = true
        textField.layer.cornerRadius = 5
        return textField
    }()
...
    }()
        
    private let doneButton: UIButton = {
        let button = UIButton()
        button.backgroundColor = .systemGray4
        button.setTitleColor(.white, for: .disabled)
        button.setTitle("완료", for: .normal)
        button.setTitleColor(UIColor.black, for: .normal)
        button.clipsToBounds = true
        button.layer.cornerRadius = 10
        button.layer.maskedCorners = [.layerMinXMinYCorner, .layerMaxXMinYCorner]
        button.isEnabled = false
        return button
...
