...
        collectionView.isPagingEnabled = true
        return collectionView
    }()
    
    private let listAddButton: UIButton = {
        let button = UIButton()
        button.setTitle("리스트 추가 +", for: .normal)
        button.backgroundColor = .mainColor
        button.contentEdgeInsets = UIEdgeInsets(top: 8, left: 10, bottom: 8, right: 10)
        button.layer.cornerRadius = 5
        button.clipsToBounds = true
        return button
    }()
...
